# rules_tar_sample

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  shell.nix
.bazel-lib/: nixos-support.bzl
cmd/: BUILD.bazel  main.go
cmd/commands/: BUILD.bazel  archive.go  root.go  size.go
examples/: 1.txt  2.txt  BUILD.bazel
pkg/archive/: BUILD.bazel  archive.go
pkg/cli/: BUILD.bazel  setup.go
pkg/size/: BUILD.bazel  size.go
tar/: defs.bzl
