load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "archive",
    srcs = [
        "archive.go",
    ],
    importpath = "github.com/r2r-dev/rules_tar/pkg/archive",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_afero//:afero",
    ],
)

alias(
    name = "go_default_library",
    actual = ":archive",
    visibility = ["//visibility:public"],
)
