load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = [
        "setup.go",
    ],
    importpath = "github.com/r2r-dev/rules_tar/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
    ],
)

alias(
    name = "go_default_library",
    actual = ":cli",
    visibility = ["//visibility:public"],
)
